<resources>
    <string name="app_name">Battery safety</string>
    <string name="title_general">General</string>
    <string name="title_charging">Charging</string>
    <string name="title_functions">Functions</string>
    <string name="menu_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--**********************theme***********************-->
    <string-array name="themes">
        <item>System</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <!--**********************************************-->
    <string name="percentForAlarm">Set percent for the alarm</string>
    <string name="batteryFullAlarm">Battery full alarm</string>
    <string name="fullAlarm">You will get an alarm at 85%</string>
    <string name="lowAlarm">You will get an alarm at 45%</string>
    <string name="batterylowAlarm">Battery low alarm</string>
    <string name="powerSavingMode">Click to go to power saving mode</string>
</resources>