<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.FunctionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_5sdp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4">
                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_32sdp"
                                android:src="@drawable/notifications"
                                android:layout_gravity="center"
                                android:layout_weight="2"/>
                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/percentForAlarm"
                                    android:textSize="@dimen/_14ssp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/batteryFullAlarm"
                                    android:textSize="@dimen/_18ssp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <Switch
                                android:id="@+id/switch_full_alarm"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_weight="2"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_full_alarm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_8sdp"
                            android:textSize="@dimen/_14ssp"
                            android:gravity="center"
                            android:visibility="gone"/>

                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/sb_full_alarm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="false"
                            android:max="100"
                            android:min="50"
                            android:progressTint="#3D86BF"
                            android:progress="85"
                            android:visibility="gone"
                            />



                    </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_32sdp"
                            android:src="@drawable/notifications"
                            android:layout_gravity="center"
                            android:layout_weight="2"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/percentForAlarm"
                                android:textSize="@dimen/_14ssp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/batterylowAlarm"
                                android:textSize="@dimen/_18ssp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <Switch
                            android:id="@+id/switch_low_alarm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="2"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_low_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lowAlarm"
                        android:layout_margin="@dimen/_8sdp"
                        android:textSize="@dimen/_14ssp"
                        android:gravity="center"
                        android:visibility="gone"/>

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/sb_low_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="45"
                        android:min="20"
                        android:progressTint="#3D86BF"
                        android:progress="40"
                        android:visibility="gone"
                        />
                    <LinearLayout
                        android:id="@+id/ly_power_saving"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        >
                        <TextView
                            android:id="@+id/tv_power_saving_mode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/powerSavingMode"
                            android:textSize="@dimen/_14ssp"
                            android:gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:visibility="gone"/>


                    </LinearLayout>




                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>